test(account-service): add unit tests for transferBetweenAccounts
Add comprehensive tests for the transferBetweenAccounts method, including cases for successful transfers, insufficient balance, invalid accounts, same source and target accounts, and error propagation for IOExceptions. Enhanced test coverage ensures better reliability and edge case handling.